--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,7 +8,7 @@
   <body>
     <h1><%= heading_1 %></h1>
     <!-- If form for items so display item form -->
-    <% if (isItemForm) { %> Show form to submit/update a new item
+    <% if (isItemForm) { %> <%- include("partials/item-form", {item}) %>
 
     <!-- If form for categories so display category form -->
     <% } else { %> <%- include("partials/category-form", {category}) %> <% } %>
