Add input for category_id; Add input for confirming secret key; Create input for updating secret key.

--- a/views/partials/category-form.ejs
+++ b/views/partials/category-form.ejs
@@ -6,15 +6,32 @@
 
 <form action="/categories/<%= action %>" method="POST">
   <div>
+    <label for="category_id">Category Id</label>
+    <div>
+      <input type="text" id="category_id" name="category_id" placeholder="e.g. Electronics" value="<%= category?.category_id %>" readonly />
+    </div>
+  </div>
+
+  <div>
     <label for="category_name">Category Name</label>
     <div>
       <input type="text" id="category_name" name="category_name" placeholder="e.g. Electronics" value="<%= category?.category_name %>" />
     </div>
   </div>
+
+  <% if (category) {  %>
   <div>
-    <label for="secret_key">Secret key</label>
+    <label for="secret_key">New Secret key</label>
     <div>
       <input type="password" id="secret_key" name="secret_key" placeholder="Enter a secret key (You can modify a category using this key)" />
+    </div>
+  </div>
+  <%  } %>
+
+  <div>
+    <label for="confirm_secret_key">Secret Key</label>
+    <div>
+      <input type="password" id="confirm_secret_key" name="confirm_secret_key" placeholder="Enter your secret key to confirm changes" />
     </div>
   </div>
 
