Modify comments and texts (nothing important).

--- a/views/partials/category-multiselect.ejs
+++ b/views/partials/category-multiselect.ejs
@@ -12,6 +12,6 @@
     <!-- Close forEach -->
   </select>
   <p>
-    Hold down the Ctrl (windows) Command (Mac) button to select multiple options.
+    Hold down the Ctrl (windows) / Command (Mac) button to select multiple options.
   </p>
 </div>
