--- a/views/form.ejs
+++ b/views/form.ejs
@@ -9,10 +9,10 @@
 
 <body>
   <h1><%= heading_1 %></h1>
-  <!-- If form for items so display item form -->
+  <!-- If form is for items so display item form -->
   <% if (isItemForm) { %> <%- include("partials/item-form", {item}) %>
 
-  <!-- If form for categories so display category form -->
+  <!-- If form is for categories so display category form -->
   <% } else { %> <%- include("partials/category-form", {category}) %> <% } %>
 </body>
 
