--- a/views/partials/item-form.ejs
+++ b/views/partials/item-form.ejs
@@ -5,6 +5,15 @@
 <% if (item) { action = `${item.item_id}?_method=PUT`; } %>
 
 <form action="/items/<%= action %>" method="POST">
+
+  <% if (item) { %>
+  <div>
+    <label for="item_id">Item Id</label>
+    <div>
+      <input type="text" id="item_id" name="item_id" placeholder="e.g. Smartphone" value="<%= item?.item_id %>" readonly />
+    </div>
+  </div>
+  <% } %>
   <div>
     <label for="item_name">Item Name</label>
     <div>
@@ -13,12 +22,10 @@
   </div>
 
   <div>
-    <label for="item_category">Category </label>
+    <label for="item_category">Categories </label>
     <div>
       <%- include("category-multiselect", {categories, item: item}) %>
     </div>
-
-    <%- include("category-tags", {categories: item?.categories}) %>
   </div>
 
   <div>
@@ -39,13 +46,8 @@
     <label for="status">Status</label>
     <div>
       <select name="status" id="status">
-        <% if (item?.status) { %>
-        <option value="1">Found</option>
-        <option value="0">Lost</option>
-        <% } else { %>
-        <option value="0">Lost</option>
-        <option value="1">Found</option>
-        <% } %>
+        <option <%= item?.status === 1 ?  'selected' : '' %> value="1">Found</option>
+        <option <%= item?.status === 0 ?  'selected' : '' %> value="0">Lost</option>
       </select>
     </div>
   </div>
@@ -58,10 +60,19 @@
     </div>
   </div>
 
+  <% if (item)  { %>
   <div>
-    <label for="secret_key">Secret key</label>
+    <label for="secret_key">New Secret Key</label>
     <div>
-      <input type="password" id="secret_key" name="secret_key" placeholder="Enter a secret key (You can modify a item using this key)" />
+      <input type="password" id="secret_key" name="secret_key" placeholder="New secret key (You can modify an item using this key)" />
+    </div>
+  </div>
+  <% } %>
+
+  <div>
+    <label for="confirm_secret_key">Secret Key</label>
+    <div>
+      <input type="password" id="confirm_secret_key" name="confirm_secret_key" placeholder="Enter your secret key to confirm changes" />
     </div>
   </div>
 
