--- a/views/partials/category-form.ejs
+++ b/views/partials/category-form.ejs
@@ -5,18 +5,27 @@
 <% if (category) { action = `${category.category_id}?_method=PUT`; } %>
 
 <form action="/categories/<%= action %>" method="POST">
+  <% if (category) { %>
   <div>
     <label for="category_id">Category Id</label>
     <div>
       <input type="text" id="category_id" name="category_id" placeholder="e.g. Electronics" value="<%= category?.category_id %>" readonly />
     </div>
   </div>
+  <% } %>
 
   <div>
     <label for="category_name">Category Name</label>
     <div>
       <input type="text" id="category_name" name="category_name" placeholder="e.g. Electronics" value="<%= category?.category_name %>" />
     </div>
+    <span>
+      <% locals.errors?.forEach(err => {
+      if (err.path === 'category_name') { %>
+      <%= err.msg %><br>
+      <% }
+    }) %>
+    </span>
   </div>
 
   <% if (category) {  %>
@@ -25,6 +34,13 @@
     <div>
       <input type="password" id="secret_key" name="secret_key" placeholder="Enter a secret key (You can modify a category using this key)" />
     </div>
+    <span>
+      <% locals.errors?.forEach(err => {
+      if (err.path === 'secret_key') { %>
+      <%= err.msg %><br>
+      <% }
+    }) %>
+    </span>
   </div>
   <%  } %>
 
@@ -33,6 +49,13 @@
     <div>
       <input type="password" id="confirm_secret_key" name="confirm_secret_key" placeholder="Enter your secret key to confirm changes" />
     </div>
+    <span>
+      <% locals.errors?.forEach(err => {
+      if (err.path === 'confirm_secret_key') { %>
+      <%= err.msg %><br>
+      <% }
+    }) %>
+    </span>
   </div>
 
   <div>
