Set mragin-top to 0 for information paragraph about input.

--- a/views/partials/category-multiselect.ejs
+++ b/views/partials/category-multiselect.ejs
@@ -11,7 +11,7 @@
     <% }) %>
     <!-- Close forEach -->
   </select>
-  <p>
+  <p style="margin-top: 0;">
     Hold down the Ctrl (windows) / Command (Mac) button to select multiple options.
   </p>
 </div>
