--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+  <%- include("partials/navbar") %>
+  <hr>
   <h1><%= heading_1 %></h1>
   <!-- If form is for items so display item form -->
   <% if (isItemForm) { %> <%- include("partials/item-form", { item }) %>
