--- a/views/items.ejs
+++ b/views/items.ejs
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= title %></title>
-  </head>
-  <body>
-    <h1><%= heading_1 %></h1>
-    <ul>
-      <% items.forEach((item) => { %> <% const status = item.status ? "Found" :
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title><%= title %></title>
+</head>
+
+<body>
+  <%- include("partials/navbar") %>
+  <hr>
+  <h1><%= heading_1 %></h1>
+  <ul>
+    <% items.forEach((item) => { %> <% const status = item.status ? "Found" :
       "Lost" %>
-      <li>
-        Name: <%= item.item_name %><br />
-        Author: <%= item.username %><br />
-        Tel: <%= item.contact %><br />
-        Status: <%= status %><br />
-        Date: <%= item.added %><br />
-        Description: <%= item.details %><br />
-        <a href="/items/<%= item.item_id %>">Open</a>
-        <br />
-        <br />
-      </li>
-      <% }) %>
-    </ul>
-  </body>
+    <li>
+      Name: <%= item.item_name %><br />
+      Author: <%= item.username %><br />
+      Tel: <%= item.contact %><br />
+      Status: <%= status %><br />
+      Date: <%= item.added %><br />
+      Description: <%= item.details %><br />
+      <a href="/items/<%= item.item_id %>">Open</a>
+      <br />
+      <br />
+    </li>
+    <% }) %>
+  </ul>
+</body>
+
 </html>
