--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,6 +4,14 @@
         {
             menu: "Home",
             link: "/"
+        },
+        {
+            menu: "Add category",
+            link: "/categories/new"
+        },
+        {
+            menu: "Add item",
+            link: "/items/new"
         }
         ].forEach(({menu, link}) => { %>
     <li><a href="<%=link%>"><%= menu %></a></li>
