--- a/views/delete-form.ejs
+++ b/views/delete-form.ejs
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+<%- include("partials/head-tag") %>
 
 <body>
-  <%- include("partials/navbar") %>
-  <hr>
+  <%- include("partials/header") %>
+
   <% if (locals.category) { %>
   <%- include("partials/delete-category-form", { category }) %>
   <% } else { %>
   <%- include("partials/delete-item-form", { item }) %>
   <% } %>
-</body>
-
-</html>
+  <%- include("partials/footer") %>
