--- a/views/item-details.ejs
+++ b/views/item-details.ejs
@@ -1,33 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title><%= title %></title>
-</head>
+<%- include("partials/head-tag") %>
 
 <body>
-  <%- include("partials/navbar") %>
-  <hr>
-  <h1><%= heading_1 %></h1>
-  <div>
+  <%- include("partials/header") %>
+  <div class="container">
     <% const status = item.status ? "Found" : "Lost" %>
+    <% const statusBg = item.status ? "bg-success" : "bg-danger" %>
+    <h1 class="h1 mb-5 d-flex align-items-center gap-3"><%= heading_1 %> <span class="d-flex align-items-center justify-content-center text-white fs-5 px-3 py-2 rounded-pill <%= statusBg %>"><%= status.toLowerCase() %></span></h1>
     <div>
-      <strong>Name:</strong> <%= item.item_name %><br />
-      <strong>Author:</strong> <%= item.username %><br />
-      <strong>Tel:</strong> <%= item.contact %><br />
-      <strong>Status:</strong> <%= status %><br />
-      <strong>Date:</strong> <%= item.added %><br />
-      <strong>Description:</strong> <%= item.details %><br />
-    </div>
-    <div>
-      <strong>Categories:</strong>
-      <% item.categories.forEach(({category_name, category_id}, index) => { %>
-      <em><a href="/categories/<%= category_id %>"><%= category_name %> <%= index === item.categories.length - 1 ? '' : ',' %></a> &nbsp;</em>
-      <% }); %>
+      <div class="d-flex flex-column p-3 shadow-sm gap-3">
+        <div><strong>Name:</strong> <%= item.item_name %></div>
+        <div><strong>Author:</strong> <%= item.username %></div>
+        <div><strong>Tel:</strong> <%= item.contact %></div>
+        <div><strong>Status:</strong> <%= status %></div>
+        <div><strong>Date:</strong> <%= item.added %></div>
+        <div>
+          <strong>Description:</strong>
+          <p style="min-height: 10rem;" class="fs-5 p-2 bg-light"><%= item.details %></p>
+        </div>
+        <div>
+          <% item.categories.forEach(({category_name, category_id}, index) => { %>
+          <a class="btn btn-secondary rounded-pill" href="/categories/<%= category_id %>"><%= category_name %></a>
+          <% }); %>
+        </div>
+      </div>
     </div>
   </div>
-</body>
-
-</html>
+  <%- include("partials/footer") %>
