--- a/views/partials/category-form.ejs
+++ b/views/partials/category-form.ejs
@@ -4,43 +4,43 @@
 <!-- If category exists so it is the update form; Modify action to send put request -->
 <% if (category) { action = `${category.category_id}/update`; } %>
 
-<form action="/categories/<%= action %>" method="POST">
+<form action="/categories/<%= action %>" method="POST" class="d-flex gap-3 flex-column shadow-sm p-5 rounded">
   <% if (category) { %>
   <div>
-    <label for="category_id">Category Id</label>
+    <label for="category_id" class="form-label">Category Id</label>
     <div>
-      <input type="text" id="category_id" name="category_id" placeholder="e.g. Electronics" value="<%= category?.category_id %>" readonly />
+      <input type="text" id="category_id" class="form-control" name="category_id" placeholder="e.g. Electronics" value="<%= category?.category_id %>" readonly />
     </div>
   </div>
   <% } %>
 
   <div>
-    <label for="category_name">Category Name</label>
+    <label for="category_name" class="form-label">Category Name</label>
     <div>
-      <input type="text" id="category_name" name="category_name" placeholder="e.g. Electronics" value="<%= category?.category_name %>" />
+      <input type="text" id="category_name" class="form-control" name="category_name" placeholder="e.g. Electronics" value="<%= category?.category_name %>" />
     </div>
     <%- include("input-error", {input_name: "category_name"}) %>
   </div>
 
   <% if (category) {  %>
   <div>
-    <label for="secret_key">New Secret key</label>
+    <label for="secret_key" class="form-label">New Secret key</label>
     <div>
-      <input type="password" id="secret_key" name="secret_key" placeholder="Enter a secret key (You can modify a category using this key)" />
+      <input type="password" id="secret_key" class="form-control" name="secret_key" placeholder="Enter a secret key (You can modify a category using this key)" />
     </div>
     <%- include("input-error", {input_name: "secret_key"}) %>
   </div>
   <%  } %>
 
   <div>
-    <label for="confirm_secret_key">Secret Key</label>
+    <label for="confirm_secret_key" class="form-label">Secret Key</label>
     <div>
-      <input type="password" id="confirm_secret_key" name="confirm_secret_key" placeholder="Enter your secret key to confirm changes" />
+      <input type="password" id="confirm_secret_key" class="form-control" name="confirm_secret_key" placeholder="Enter your secret key to confirm changes" />
     </div>
     <%- include("input-error", {input_name: "confirm_secret_key"}) %>
   </div>
 
-  <div>
-    <button type="submit">Submit</button>
-  </div>
+
+  <button type="submit" class="btn btn-primary">Submit</button>
+
 </form>
