--- a/views/partials/input-error.ejs
+++ b/views/partials/input-error.ejs
@@ -1,4 +1,4 @@
-<span>
+<span class="text-danger">
   <% locals.errors?.forEach(err => {
     if (err.path === input_name) { %>
   <%= err.msg %><br>
