--- a/views/partials/item-form.ejs
+++ b/views/partials/item-form.ejs
@@ -4,52 +4,52 @@
 <!-- If item exists so it is the update form; Modify action to send put request -->
 <% if (item) { action = `${item.item_id}/update`; } %>
 
-<form action="/items/<%= action %>" method="POST">
+<form action="/items/<%= action %>" method="POST" class="d-flex gap-3 flex-column shadow-sm p-5 rounded">
 
   <% if (item) { %>
   <div>
-    <label for="item_id">Item Id</label>
+    <label for="item_id" class="form-label">Item Id</label>
     <div>
-      <input type="text" id="item_id" name="item_id" placeholder="e.g. Smartphone" value="<%= item?.item_id %>" readonly />
+      <input type="text" id="item_id" class="form-control" name="item_id" placeholder="e.g. Smartphone" value="<%= item?.item_id %>" readonly />
     </div>
   </div>
   <% } %>
   <div>
-    <label for="item_name">Item Name</label>
+    <label for="item_name" class="form-label">Item Name</label>
     <div>
-      <input type="text" id="item_name" name="item_name" placeholder="e.g. Smartphone" value="<%= item?.item_name %>" />
+      <input type="text" id="item_name" class="form-control" name="item_name" placeholder="e.g. Smartphone" value="<%= item?.item_name %>" />
     </div>
     <%- include("input-error", {input_name: "item_name"}) %>
   </div>
 
   <div>
-    <label for="item_category">Categories </label>
+    <label for="categories" class="form-label">Categories </label>
     <div>
       <%- include("category-multiselect", {categories, item: item}) %>
     </div>
-    <%- include("input-error", {input_name: "item_category"}) %>
+    <%- include("input-error", {input_name: "categories"}) %>
   </div>
 
   <div>
-    <label for="username">Username</label>
+    <label for="username" class="form-label">Username</label>
     <div>
-      <input type="text" id="username" name="username" placeholder="e.g. green_apple" value="<%= item?.username %>" />
+      <input type="text" id="username" class="form-control" name="username" placeholder="e.g. green_apple" value="<%= item?.username %>" />
     </div>
     <%- include("input-error", {input_name: "username"}) %>
   </div>
 
   <div>
-    <label for="contact">Contact</label>
+    <label for="contact" class="form-label">Contact</label>
     <div>
-      <input type="text" id="contact" name="contact" placeholder="e.g. +994555000000" value="<%= item?.contact %>" />
+      <input type="text" id="contact" class="form-control" name="contact" placeholder="e.g. +994555000000" value="<%= item?.contact %>" />
     </div>
     <%- include("input-error", {input_name: "contact"}) %>
   </div>
 
   <div>
-    <label for="status">Status</label>
+    <label for="status" class="form-label">Status</label>
     <div>
-      <select name="status" id="status">
+      <select name="status" id="status" class="form-select">
         <option <%= item?.status === 1 ?  'selected' : '' %> value="1">Found</option>
         <option <%= item?.status === 0 ?  'selected' : '' %> value="0">Lost</option>
       </select>
@@ -58,9 +58,9 @@
   </div>
 
   <div>
-    <label for="details">Details</label>
+    <label for="details" class="form-label">Details</label>
     <div>
-      <textarea name="details" id="details" placeholder="e.g. I found this item at the bus station.">
+      <textarea name="details" id="details" class="form-control" placeholder="e.g. I found this item at the bus station." style="height: 10rem;">
 <%= item?.details %></textarea>
     </div>
     <%- include("input-error", {input_name: "details"}) %>
@@ -68,23 +68,22 @@
 
   <% if (item)  { %>
   <div>
-    <label for="secret_key">New Secret Key</label>
+    <label for="secret_key" class="form-label">New Secret Key</label>
     <div>
-      <input type="password" id="secret_key" name="secret_key" placeholder="New secret key (You can modify an item using this key)" />
+      <input type="password" id="secret_key" class="form-control" name="secret_key" placeholder="New secret key (You can modify an item using this key)" />
     </div>
     <%- include("input-error", {input_name: "secret_key"}) %>
   </div>
   <% } %>
 
   <div>
-    <label for="confirm_secret_key">Secret Key</label>
+    <label for="confirm_secret_key" class="form-label">Secret Key</label>
     <div>
-      <input type="password" id="confirm_secret_key" name="confirm_secret_key" placeholder="Enter your secret key to confirm changes" />
+      <input type="password" id="confirm_secret_key" class="form-control" name="confirm_secret_key" placeholder="Enter your secret key to confirm changes" />
     </div>
     <%- include("input-error", {input_name: "confirm_secret_key"}) %>
   </div>
 
-  <div>
-    <button type="submit">Submit</button>
-  </div>
+
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
